Bug 373067 - Selecting multiple keyframes on the timeline and holding, gives a wrong pivot point for the keyframes.
Summary: Selecting multiple keyframes on the timeline and holding, gives a wrong pivot...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: 3.1 Beta
Platform: macOS (DMG) macOS
: NOR minor
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-11-29 07:52 UTC by Kari
Modified: 2017-04-07 09:28 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
The pivot of the keys doesn't match the drop location (1001.66 KB, video/quicktime)
2016-11-29 07:52 UTC, Kari
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kari 2016-11-29 07:52:50 UTC
Created attachment 102516 [details]
The pivot of the keys doesn't match the drop location

Steps to Reproduce:

1.Make 5 keys on the timeline.
2.Select key nro. 5, press shift, select key nro. 1 and hold.

Actual Results:
When you move the keys, Krita suggests that you are holding and trying to relocate the keys based on key nro. 5, but it is actually holding key nro. 1.

Expected result:
When trying to relocate multiple keys, Krita would hold the lastly selected key under the cursor.

In the video, the first selection process seems to be buggy. 

The second selection process is working and is the following - select last key, press shift, select first key, release. Select first key, drag, release.
Comment 1 Dmitry Kazakov 2016-12-12 10:53:58 UTC
Confirm. The bug is also reproducible on Linux.
Comment 2 Dmitry Kazakov 2016-12-12 10:54:42 UTC
Added to phabricator:
https://phabricator.kde.org/T4880
Comment 3 Dmitry Kazakov 2017-04-07 09:09:10 UTC
Git commit 4c65bacf37dcf16306b8149cd420e7e550c5bfac by Dmitry Kazakov.
Committed on 07/04/2017 at 09:07.
Pushed by dkazakov into branch 'master'.

Don't start D&D when shift is pressed

There seem to be a bug in Qt. It gets crazy when one starts a drag
right during shift-selection. So just forbid D&D when shift is pressed.
Fixes T4880

M  +16   -0    plugins/dockers/animation/timeline_frames_view.cpp

https://commits.kde.org/krita/4c65bacf37dcf16306b8149cd420e7e550c5bfac
Comment 4 Dmitry Kazakov 2017-04-07 09:28:24 UTC
Git commit 1d39e7222fa877710e7c0a1b0fa1e38082690e1a by Dmitry Kazakov.
Committed on 07/04/2017 at 09:28.
Pushed by dkazakov into branch 'krita/3.1'.

Don't start D&D when shift is pressed

There seem to be a bug in Qt. It gets crazy when one starts a drag
right during shift-selection. So just forbid D&D when shift is pressed.
Fixes T4880

M  +16   -0    plugins/dockers/animation/timeline_frames_view.cpp

https://commits.kde.org/krita/1d39e7222fa877710e7c0a1b0fa1e38082690e1a