Don't start D&D when shift is pressed

There seem to be a bug in Qt. It gets crazy when one starts a drag
right during shift-selection. So just forbid D&D when shift is pressed.

BUG:373067
Fixes T4880